# haskell-exercise

./: README.md  haskell-challenge.cabal
src/: Exercise.hs
test/: unit-tests.hs
