name:                haskell-challenge
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/skyvier/haskell-challenge#readme
license:             BSD3
license-file:        LICENSE
author:              Joonas Laukka
maintainer:          joonas.laukka@relexsolutions.com
copyright:           2017 RELEX Solutions
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Exercise
  build-depends:       base >= 4.7 && < 5
                     , time
                     , lens
                     , lens-aeson
                     , unordered-containers
                     , bytestring
                     , text
                     , monadplus
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             unit-tests.hs
  build-depends:       base
                     , haskell-challenge
                     , classy-prelude
                     , tasty
                     , tasty-hunit
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/skyvier/haskell-challenge
